--- a/om oss.html
+++ b/om oss.html
@@ -42,7 +42,7 @@
 				<a href="turismab@hotmail.com">turismab@hotmail.com</a>
 			</p>
 			<p id="fotnot">
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores omnis inventore<br>quos laboriosam nostrum reprehenderit, eos rerum  
+				Lorem dolor, sit amet consectetur adipisicing elit. Asperiores omnis inventore<br>quos laboriosam nostrum reprehenderit, eos rerum  
 		</footer>
 
     <footer class="hotelfooter">
