--- a/hotell.html
+++ b/hotell.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<hr />
 	     	<nav class="nav">
             		<ul class="nav">
 
@@ -31,7 +32,7 @@
 <h1 class="Hotelheader">Topp hotell och flyg runt om i världen </h1>
 
     <article class="hotel1 boxhotel">
-      <img class="https://image.freepik.com/free-photo/contemporary-building-exterior-skyscraper-design-concept_53876-65455.jpg" style="width:50%" alt="">
+      <img class="https://image.freepik.com/free-photo/housekeeper-cleaning-hotel-room_53876-30786.jpg" style="width:50%" alt="">
       <h4>Hotell Mikrokosmos i Tokyo med flyg för en person</h4>
       <h5>Hotell för 1299kr per natt;<br>Flyg från 5999kr</h5>
       <p class="hoteltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores fugiat in eos dolore nemo
@@ -40,7 +41,7 @@
     </article>
 
     <article class="hotel2 boxhotel">
-      <img class="hotelbild" src="./Bilder/Hotell/costarica.jpeg" style="width:150%" alt="">
+      <img class="hotelbild"  style="width:150%" alt="">
       <h4>Hotell Paradise i Paris med flyg för 2 personer</h4>
        <h5>Hotell för 999kr per natt;<br>Flyg från 1999kr</h5>
       <p class="hoteltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores fugiat in eos dolore nemo
@@ -49,7 +50,7 @@
     </article>
 
     <article class="hotel3 boxhotel">
-      <img class="hotelbild" src="./Bilder/Hotell/indien.jpeg" style="width:100%" alt="">
+      <img class="hotelbild"  style="width:100%" alt="">
       <h4>Hotell Magic Shop i Kauala Lumpur + flyg för familj på 4</h4>
       <h5>Hotell 1999kr per natt;<br>Flyg från 6999kr</h5>
       <h6>För mer information eller andra önskningar var vänlig kontakta oss</h6>
