--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
    
 
-    <!--  <footer class="hotelfooter">
+    <footer class="hotelfooter">
       <p>Copyright © Turism och Hotell AB 2019</p>
     </footer>
 
