--- a/hotell och resmål.html
+++ b/hotell och resmål.html
@@ -39,6 +39,11 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
+      <header class="header">
+            <a href="index.html"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Airplane_silhouette.svg/400px-Airplane_silhouette.svg.png" alt="Logo"></a>
+            <h3 id="kontakt">Kontaktdata<br>E-post & tel.</h3>
+               <a href="index.html" class="btn">KNAPP</a>
+
 <hr />
         <nav class="nav">
                 <ul class="nav">
@@ -52,6 +57,7 @@
 
                 </ul>
                 <a class="cta" href="#"></a>
+
 
 
   
