--- a/min sida.html
+++ b/min sida.html
@@ -1,9 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
+<html class="no-js" lang="Swedish">
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="webbplats">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+
+
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  
+  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <!DOCTYPE html>
 <html> 
 <head>
-	 <meta charset="UTF-8">
-	     <title>Turism</title>
-	 <link rel="stylesheet" href="css/style.css"/>
+   <meta charset="UTF-8">
+       <title>Turism</title>
+   <link rel="stylesheet" href="css/style.css"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -17,15 +58,15 @@
   <hr />
 
 
-            	<nav class="nav">
-            		<ul class="nav">
+              <nav class="nav">
+                <ul class="nav">
 
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="om oss.html">Om Oss </a></li>
                     <li><a href="min sida.html">Min Sida</a></li>
                     <li><a href="hotell.html">Hotell och Resmål</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
-       		</ul>
+          </ul>
 
   <form action="action_page.php">
   <div class="container">
@@ -56,12 +97,6 @@
  <footer class="hotelfooter">
       <p>Copyright © Turism och Hotell AB 2019</p>
     </footer>
-
-
-
-
-
-
 
 </body>
 </html>
