--- a/om oss.html
+++ b/om oss.html
@@ -1,8 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
+<html class="no-js" lang="Swedish">
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="webbplats">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+
+
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  
+  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+
+  <!DOCTYPE html>
 <html> 
 <head>
-	 <meta charset="UTF-8">
-	 <link rel="stylesheet" href="css/style.css"/>
+   <meta charset="UTF-8">
+   <link rel="stylesheet" href="css/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turism</title>
 
@@ -15,8 +57,8 @@
 <body>
 
 
-	     	<nav class="nav">
-            		<ul class="nav">
+        <nav class="nav">
+                <ul class="nav">
 
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="om oss.html">Om Oss </a></li>
@@ -25,34 +67,34 @@
                     <li><a href="kontakt.html">Kontakt</a></li>
 
 
-            		</ul>
-            		<a class="cta" href="#"></a>
+                </ul>
+                <a class="cta" href="#"></a>
  <section class="showcase-about">
-            		 <h1> Om oss  </h1>
+                 <h1> Om oss  </h1>
 
             <article id="about-text">
             <p>Lorem ipsum dolor sit amet, ex veri assentior qui. Et mei enim magna invenire, ex nam decore legimus. Mei accumsan contentiones ut. Id nonumes alienum vix, ut eum lucilius hendrerit. Affert regione mediocritatem mea ut, vix an eros appareat delicata. An usu dico harum. Dicta moderatius pro at, te nam duis viris clita. Te admodum perfecto est, quodsi commodo persius id nec. Viris fastidii iracundia eam cu, primis nostrum vel ea. Eos te quis voluptatibus, et sit tantas labore.</p>
-			
-			<p>Eu ius minimum appellantur, ne fugit nonumy consectetuer duo. Wisi audire eum ex. Erat vocent fastidii sed te, qui ad ignota percipit. Eum nulla dictas accommodare at, tale suscipiantur in nec. Justo partiendo elaboraret mel ei, mel nostrud aliquam sententiae ne. Ut oratio euismod duo, vocibus mandamus abhorreant et sit.</p>
+      
+      <p>Eu ius minimum appellantur, ne fugit nonumy consectetuer duo. Wisi audire eum ex. Erat vocent fastidii sed te, qui ad ignota percipit. Eum nulla dictas accommodare at, tale suscipiantur in nec. Justo partiendo elaboraret mel ei, mel nostrud aliquam sententiae ne. Ut oratio euismod duo, vocibus mandamus abhorreant et sit.</p>
 
-			<footer class="fotnot">
+      <footer class="fotnot">
             <p>© 2019 Turism Ab
-				<br>
-				<a href="turismab.se">turismab.se</a>
-				<br>
-				<a href="turismab@hotmail.com">turismab@hotmail.com</a>
-			</p>
-			<p id="fotnot">
-				Lorem dolor, sit amet consectetur adipisicing elit. Asperiores omnis inventore<br>quos laboriosam nostrum reprehenderit, eos rerum  
-		</footer>
+        <br>
+        <a href="turismab.se">turismab.se</a>
+        <br>
+        <a href="turismab@hotmail.com">turismab@hotmail.com</a>
+      </p>
+      <p id="fotnot">
+        Lorem dolor, sit amet consectetur adipisicing elit. Asperiores omnis inventore<br>quos laboriosam nostrum reprehenderit, eos rerum  
+    </footer>
 
     <footer class="hotelfooter">
       <p>Copyright © Turism och Hotell AB 2019</p>
     </footer>
 
 
-		
-		</article>
+    
+    </article>
 
         </section>
         <!--SECTIONS SLUT-->
