--- a/hotell och resmål.html
+++ b/hotell och resmål.html
@@ -67,7 +67,7 @@
       <img class="https://image.freepik.com/free-photo/housekeeper-cleaning-hotel-room_53876-30786.jpg" style="width:50%" alt="">
       <h4>Hotell Mikrokosmos i Tokyo med flyg för en person</h4>
       <h5>Hotell för 1299kr per natt;<br>Flyg från 5999kr</h5>
-      <p class="hoteltext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores fugiat in eos dolore nemo
+      <p class="hoteltext">Lorem dolor sit amet consectetur adipisicing elit. Asperiores fugiat in eos dolore nemo
         doloribus accusamus molestiae quo expedita dolorum.</p>
             <input type="submit" value="Boka">
     </article>
