--- a/hotell och resmål.html
+++ b/hotell och resmål.html
@@ -51,7 +51,7 @@
                     <li><a href="index.html">Hem</a></li>
                     <li><a href="om oss.html">Om Oss </a></li>
                     <li><a href="min sida.html">Min Sida</a></li>
-                    <li><a href="hotell och resmål.html">Hotell och Resmål</a></li>
+                    <li><a href="hotell och resmal.html">Hotell och Resmål</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
 
 
